force-app/src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>TR1__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Content</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Daxtra_Parsing_Status__c</fullName>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Interview_Expiration_Date__c</fullName>
        <description>If the Content Version is linked with a &apos;Send Out Schedule V2&apos; record, it stores the value of the &apos;Interview Date &amp; Time&apos; of that record. This field may be utilized in the logic of deleting ICS files.</description>
        <inlineHelpText>If the Content Version is linked with a &apos;Send Out Schedule V2&apos; record, it stores the value of the &apos;Interview Date &amp; Time&apos; of that record. This field may be utilized in the logic of deleting ICS files.</inlineHelpText>
        <label>Interview Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__Is_Internal_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The field is used for mass processing flow and is checked when internal validation is failed(eg file size, file extension)</inlineHelpText>
        <label>Is Internal Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Monitor_Bulk_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Monitor Bulk Job</label>
        <referenceTo>TR1__Monitor_Bulk_Job__c</referenceTo>
        <relationshipLabel>Content Versions</relationshipLabel>
        <relationshipName>Content_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Processing_Status__c</fullName>
        <label>Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Related_Attachment_Id__c</fullName>
        <description>Holds the attachment id with same file.</description>
        <label>Related Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__isUploadPending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upload Pending</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>